--- a/web/src/pages/menu/style.styl
+++ b/web/src/pages/menu/style.styl
@@ -20,5 +20,7 @@
             >div
                 background rgba(149, 106, 106, 0.1)
                 padding 0 10px
+                &.file
+                    background aliceblue
             &.active>div
                 background #ddeaf6
